--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
    <!-- HTML meta refresh URL redirection -->
-   <meta http-equiv="refresh"
-   content="0; url=https://nocow-cn.github.io/index.php/首页">
+   <meta http-equiv="refresh" content="0; url=https://nocow-cn.github.io/index.php/首页">
+   <meta name="google-site-verification" content="T6wIrDV6vYKpE1Ir5Z8lMfSSMJdvBhJac7dLFwBvtBs" />
 </head>
 <body>
    <p>The page has moved to:
